--- a/templates/playlists/tvshow_detail.html
+++ b/templates/playlists/tvshow_detail.html
@@ -1,21 +1,27 @@
 {% extends 'base.html' %}
 
-
 {% block head_title %}
-    {{object.title}} / 
-    {{block.super}}
-{% endblock head_title %}
-    
+    {{ object.title }} /
+    {{ block.super }}
+{% endblock %}
+
+
 
 
 {% block content %}
-    <h1>{{object.title}}</h1>
-    {{object.slug}}{{object.get_short_display}}
 
-    
-    {% for season in object.seasons %}
-        <li>{{season.order}} {{season.title}} {{season.slug}}</li>
-    {% endfor %}
-        
-{% endblock content %}
-    
+<h1>{{ object.title }}</h1>
+
+{{ object.slug }} {{ object.get_short_display }}
+
+
+<h3>Trailer</h3>
+{% include 'videos/embed.html' with video_id=object.get_video_id %}
+
+
+
+{% for season in object.seasons %}
+
+<li>{{season.order }} {{ season.title }} {{ season.slug}} {{ season.id }}</li>
+{% endfor %}
+{% endblock %}
