--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>
-            {% block head_title %}   
-                DjangoFlix
-            {% endblock head_title %} 
-        </title> 
-        <body>
-            {% block content%}
-            {% endblock content %}
-        </body>
+            {% block head_title %}DjangoFlix{% endblock %}
+        </title>
+
     </head>
+    <body>
+        <form method='GET' action='/search/'>
+            <input type='text' name='q' placeholder='Search for a movie or tv show'>
+            <button type='submit'>Search</button>
+        </form>
+
+
+        {% block content %}
+        {% endblock content %}
+    </body>
 </html>
