--- a/templates/playlist_list.html
+++ b/templates/playlist_list.html
@@ -1,27 +1,35 @@
 {% extends 'base.html' %}
 
-
 {% block head_title %}
-    
     {% if title %}
-        {{title}}/
+    {{ title }} /
     {% endif %}
-    {{block.super}}
-        
-{% endblock head_title %}
-    
+    {{ block.super }}
+{% endblock %}
+
+
+
 
 {% block content %}
 
 {% if title %}
-    <h1>{{title}}</h1>
+    <h1>{{ title }}</h1>
 {% endif %}
-    
-<ul>
-    {% for instance in object_list %}
-        <li>{{instance.title}} {{instance.get_short_display}}</li>
-    {% endfor %}
-</ul>
-    
-{% endblock content %}
-    
+
+
+{% for instance in object_list %}
+<div>
+    <h3>{{ instance.title }} </h3>
+    <p>{{ instance.description }}</p>
+    {% if instance.is_movie %}
+        {% include 'playlists/cards/movie.html' with movie=instance %}
+    {% elif instance.is_show %}
+        {% include 'playlists/cards/show.html' with show=instance %}
+    {% else %}
+    {% endif %}
+
+</div>
+{% endfor %}
+
+
+{% endblock %}
