--- a/templates/playlists/movie_detail.html
+++ b/templates/playlists/movie_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load rating %}
 {% block head_title %}
     {{ object.title }} /
     {{ block.super }}
@@ -11,9 +11,12 @@
 {% block content %}
 
 <h1>{{ object.title }}</h1>
-
+<div>
+    {% rating instance=object %}
+</div>
+<div>
 {{ object.slug }} {{ object.get_short_display }}
 
 {% include 'videos/embed.html' with video_id=object.get_video_id %}
-
+</div>
 {% endblock %}
